Azure_Kubernetes/3-tier_AKS/MicroTodoUI/Manifeast/azure-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-pod
spec:
  selector:
    matchLabels:
      app: ms-pod
  template:
    metadata:
      labels:
        app: ms-pod
    spec:
      containers:
      - name: ms-pod
        image: imdevacr89.azurecr.io/frontend:v1
        ports:
        - containerPort: 80
