Azure_Kubernetes/3-tier_AKS/MicroTodoUI/Manifeast/azure-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-service
spec:
  selector:
    app: ms-pod
  ports:
  - port: 8000
    targetPort: 80
